fix: add spacing for when svg not present in dropdown

--- a/packages/ui-components/src/Common/Select/index.module.css
+++ b/packages/ui-components/src/Common/Select/index.module.css
@@ -112,12 +112,12 @@
 }
 
 .dropdown:has(.label) .text > span {
-  &:has(svg) > svg {
+  &:has(svg) {
     @apply ml-3;
   }
 
-  &:not(&:has(svg)) > span {
-    @apply ml-3;
+  &:not(:has(svg)) > span {
+    @apply ml-[2.25rem];
   }
 }
 
